--- a/config.env
+++ b/config.env
@@ -1,27 +1,21 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/c4hesaku/android_kernel_lenovo_tabm8
+KERNEL_SOURCE_BRANCH=main
+KERNEL_CONFIG=/arch/arm/configs/tb8768p1_bsp_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
-# Clang
-## Custom
 USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=
 CUSTOM_CLANG_BRANCH=
-
-### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
-## AOSP
 CLANG_BRANCH=master-kernel-build-2022
 CLANG_VERSION=r450784e
 
-# GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
 USE_CUSTOM_GCC_64=false
@@ -33,32 +27,25 @@ CUSTOM_GCC_32_SOURCE=
 CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
-# KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
-# Configuration
-DISABLE-LTO=false
-DISABLE_CC_WERROR=false
-ADD_KPROBES_CONFIG=false
-ADD_OVERLAYFS_CONFIG=false
-APPLY_KSU_PATCH=false
+DISABLE_LTO=true
+DISABLE_CC_WERROR=true
+ADD_KPROBES_CONFIG=true
+ADD_OVERLAYFS_CONFIG=true
+APPLY_KSU_PATCH=true
 REMOVE_UNUSED_PACKAGES=true
 
-# AnyKernel3
-## AnyKernel3 Custom
 USE_CUSTOM_ANYKERNEL3=false
 CUSTOM_ANYKERNEL3_SOURCE=
 CUSTOM_ANYKERNEL3_BRANCH=
 
-# Ccache
 ENABLE_CCACHE=true
 
-# DTBO image
 NEED_DTBO=false
 
-# Build boot images
-BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+BUILD_BOOT_IMG=true
+SOURCE_BOOT_IMAGE=https://github.com/c4hesaku/android_kernel_lenovo_tabm8/raw/refs/heads/main/boot/boot.img
