--- a/config.env
+++ b/config.env
@@ -2,9 +2,9 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/c4hesaku/android_kernel_lenovo_tabm8
 KERNEL_SOURCE_BRANCH=main
-KERNEL_CONFIG=tb8768p1_bsp_defconfig
+KERNEL_CONFIG=arch/arm/configs/tb8768p1_bsp_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
-ARCH=arm
+ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
