--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -208,38 +208,49 @@ jobs:
         echo "UPLOADNAME=-KernelSU_$KSU_VERSION" >> $GITHUB_ENV
 
     - name: Setup Configuration for Kernel
-  run: |
-    cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
-    # For MediaTek devices with 32-bit kernel on arm64 arch
-    DEFCONFIG_PATH="arch/arm/configs/${{ env.KERNEL_CONFIG }}"
-    
-    if [ ${{ env.APPLY_KSU_PATCH }} = true ]; then
-        bash $GITHUB_WORKSPACE/patches/patches.sh
-        if grep -q "CONFIG_KSU" $DEFCONFIG_PATH; then
-            sed -i 's/# CONFIG_KSU is not set/CONFIG_KSU=y/g' $DEFCONFIG_PATH
-            sed -i 's/CONFIG_KSU=n/CONFIG_KSU=y/g' $DEFCONFIG_PATH
+      run: |
+        cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
+        # Handle both arm and arm64 cases properly
+        if [ "${{ env.ARCH }}" = "arm64" ]; then
+            DEFCONFIG_PATH="arch/arm/configs/${{ env.KERNEL_CONFIG }}"
         else
-            echo "CONFIG_KSU=y" >> $DEFCONFIG_PATH
+            DEFCONFIG_PATH="arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}"
         fi
-    fi
-    if [ ${{ env.ADD_KPROBES_CONFIG }} = true -a ${{ env.APPLY_KSU_PATCH }} != true ]; then
-        echo "CONFIG_MODULES=y" >> $DEFCONFIG_PATH
-        echo "CONFIG_KPROBES=y" >> $DEFCONFIG_PATH
-        echo "CONFIG_HAVE_KPROBES=y" >> $DEFCONFIG_PATH
-        echo "CONFIG_KPROBE_EVENTS=y" >> $DEFCONFIG_PATH
-    fi
-    if [ ${{ env.ADD_OVERLAYFS_CONFIG }} = true ]; then
-        echo "CONFIG_OVERLAY_FS=y" >> $DEFCONFIG_PATH
-    fi
-    if [ ${{ env.DISABLE-LTO }} = true ]; then
-        sed -i 's/CONFIG_LTO=y/CONFIG_LTO=n/' $DEFCONFIG_PATH
-        sed -i 's/CONFIG_LTO_CLANG=y/CONFIG_LTO_CLANG=n/' $DEFCONFIG_PATH
-        sed -i 's/CONFIG_THINLTO=y/CONFIG_THINLTO=n/' $DEFCONFIG_PATH
-        echo "CONFIG_LTO_NONE=y" >> $DEFCONFIG_PATH
-    fi
-    if [ ${{ env.DISABLE_CC_WERROR }} = true ]; then
-        echo "CONFIG_CC_WERROR=n" >> $DEFCONFIG_PATH
-    fi
+
+        echo "Using defconfig path: $DEFCONFIG_PATH"
+        ls -la $(dirname "$DEFCONFIG_PATH") || true
+        
+        if [ "${{ env.APPLY_KSU_PATCH }}" = "true" ]; then
+            bash $GITHUB_WORKSPACE/patches/patches.sh
+            if grep -q "CONFIG_KSU" "$DEFCONFIG_PATH"; then
+                sed -i 's/# CONFIG_KSU is not set/CONFIG_KSU=y/g' "$DEFCONFIG_PATH"
+                sed -i 's/CONFIG_KSU=n/CONFIG_KSU=y/g' "$DEFCONFIG_PATH"
+            else
+                echo "CONFIG_KSU=y" >> "$DEFCONFIG_PATH"
+            fi
+        fi
+        
+        if [ "${{ env.ADD_KPROBES_CONFIG }}" = "true" ] && [ "${{ env.APPLY_KSU_PATCH }}" != "true" ]; then
+            echo "CONFIG_MODULES=y" >> "$DEFCONFIG_PATH"
+            echo "CONFIG_KPROBES=y" >> "$DEFCONFIG_PATH"
+            echo "CONFIG_HAVE_KPROBES=y" >> "$DEFCONFIG_PATH"
+            echo "CONFIG_KPROBE_EVENTS=y" >> "$DEFCONFIG_PATH"
+        fi
+        
+        if [ "${{ env.ADD_OVERLAYFS_CONFIG }}" = "true" ]; then
+            echo "CONFIG_OVERLAY_FS=y" >> "$DEFCONFIG_PATH"
+        fi
+        
+        if [ "${{ env.DISABLE_LTO }}" = "true" ]; then
+            sed -i 's/CONFIG_LTO=y/CONFIG_LTO=n/' "$DEFCONFIG_PATH"
+            sed -i 's/CONFIG_LTO_CLANG=y/CONFIG_LTO_CLANG=n/' "$DEFCONFIG_PATH"
+            sed -i 's/CONFIG_THINLTO=y/CONFIG_THINLTO=n/' "$DEFCONFIG_PATH"
+            echo "CONFIG_LTO_NONE=y" >> "$DEFCONFIG_PATH"
+        fi
+        
+        if [ "${{ env.DISABLE_CC_WERROR }}" = "true" ]; then
+            echo "CONFIG_CC_WERROR=n" >> "$DEFCONFIG_PATH"
+        fi
 
     - name: Setup ccache
       if: env.ENABLE_CCACHE == 'true'
